# Fail2banMonitor

./: .gitignore  README.md  Update-Version_Fail2ban-Monitor.sh  app.py  banned_ips.json  changelog.txt  database.py  fail2ban_service.py  install_debian.sh  model_loader.py  models.py  pyproject.toml  python_requirements.txt  replit.md  uninstall_debian.sh
static/css/: custom.css
static/js/: main.js
templates/: ban_times.html  index.html
