[project]
name = "fail2ban-monitor"
version = "2.0.1"
description = "Flask web application for monitoring and displaying banned IPs from Fail2ban with real-time updates and AbuseIPDB integration"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
